Fix: Status being covered by remove btn

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body{
   display: grid;
   grid-template-rows: subgrid;
   gap:12px;
-  grid-row: span 4;
+  grid-row: span 5;
 
 
   background-color: var(--card-bg);
